--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,14 @@
     <meta name="keywords" content="web,design,html,css,html5,development">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Getting started</title>
+    <title>Gowa Web Admin</title>
+    <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
     <body>
         <div id="app"></div>
         <script src="app/bundle.js" ></script>
+        <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
+        <script src="vendor/semantic.min.js"></script>
     </body>
 </html>
